[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-cli-npm"
version = "0.0.1.dev0"
description = "Command line interface to talk to pulpcore's REST API. (Npm plugin commands)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-cli>=0.23.1,<0.37",
  "pulp-glue-npm==0.0.1.dev0",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-npm"
changelog = "https://github.com/pulp/pulp-cli-npm/blob/main/CHANGES.md"

[project.entry-points."pulp_cli.plugins"]
npm = "pulpcore.cli.npm"

[tool.pulp_cli_template]
app_label = "npm"
glue = true
docs = false
src_layout = true
translations = false

[tool.pytest.ini_options]
markers = [
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulp_npm: pulp_npm tests",
]
