[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-glue-npm"
version = "0.0.1.dev0"
description = "Version agnostic glue library to talk to pulpcore's REST API. (Npm plugin)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-glue>=0.36.0,<0.37",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-npm"
changelog = "https://github.com/pulp/pulp-cli-npm/blob/main/CHANGES.md"

[tool.mypy]
# This section is managed by the cookiecutter templates.
strict = true
warn_unused_ignores = false
show_error_codes = true
files = "src/**/*.py, tests/**/*.py"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# This section is managed by the cookiecutter templates.
module = [
  "schema.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
# This section is managed by the cookiecutter templates.
where = ["src"]
include = ["pulp_glue.*"]
namespaces = true

[tool.setuptools.package-data]
# This section is managed by the cookiecutter templates.
"*" = ["py.typed"]


[tool.ruff]
# This section is managed by the cookiecutter templates.
line-length = 100

[tool.ruff.lint]
# This section is managed by the cookiecutter templates.
extend-select = ["I"]

